fix: nginx running success

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,19 +10,19 @@ services:
       - "443:443"
       - "80:80"
     volumes:
-      - ./srcs/backend/srcs:/project
+      - ./srcs/frontend/srcs:/project
 
-  backend:
-    init: true
-    build: ./srcs/backend
-    image: django
-    container_name: django
-    env_file:
-      - .env
-    ports:
-      - 8000:8000
-    volumes:
-      - ./srcs/backend/srcs:/project
+#  backend:
+#    init: true
+#    build: ./srcs/backend
+#    image: django
+#    container_name: django
+#    env_file:
+#      - .env
+#    ports:
+#      - 8000:8000
+#    volumes:
+#      - ./srcs/backend/srcs:/project
   # database:
 
 networks:
