--- a/srcs/frontend/nginx.conf
+++ b/srcs/frontend/nginx.conf
@@ -7,17 +7,17 @@ server {
     ssl_certificate_key "/etc/ssl/private/server.key";
     ssl_protocols TLSv1.2 TLSv1.3;
 
-    root /var/www/html;
+    root /project/;
     index index.html;
 
     location / {
         try_files $uri /index.html;
     }
+}
 
-    server {
+server {
 		listen 80;
 		server_name localhost;
 	
 		return 301 https://$host$request_uri;
-	}
 }
