--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "443:443"
       - "80:80"
     volumes:
-      - ./srcs/frontend/srcs:/project
+      - ./srcs/frontend/srcs:/usr/share/nginx/html
 
 #  backend:
 #    init: true
