--- a/srcs/frontend/nginx.conf
+++ b/srcs/frontend/nginx.conf
@@ -7,7 +7,7 @@ server {
     ssl_certificate_key "/etc/ssl/private/server.key";
     ssl_protocols TLSv1.2 TLSv1.3;
 
-    root /project/;
+    root /usr/share/nginx/html;
     index index.html;
 
     location / {
